# Rusty-Tokenizing-RPC

./: .gitignore  README.md  shell.nix
server/: Cargo.toml  build.rs
server/proto/: token.proto  token_descriptor
server/src/: main.rs
