[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.10.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.10.2"
tokio-stream = "0.1.14"
tonic-web = "0.11.0"
tower-http = { version = "0.4.0", features = ["cors"] }

[build-dependencies]
tonic-build = "0.10.2"
